Attempt to fix button selecting text on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -211,4 +211,5 @@ li a {
 .tristate {
 	cursor: default;
 	text-align:center;
+	user-select: none;
 }
